unpackaged/main/default/objects/HL_Community_Activity__c/HL_Community_Activity__c.object-meta.xml
<CustomObject>
    <label>HL Community Activity</label>
    <nameField>
        <displayFormat>CA-{00000000}</displayFormat>
        <label>HL Community Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HL Community Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>