unpackaged/main/default/objects/HL_Community_Activity__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <description>HL Community Activity Date</description>
    <label>Activity Date</label>
    <type>DateTime</type>
</CustomField>