unpackaged/main/default/objects/HL_Community_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>HL Community Activity Type</description>
    <label>Activity Type</label>
    <type>TextArea</type>
</CustomField>