unpackaged/main/default/objects/HL_Community_Activity__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HL Community Activities</relationshipLabel>
    <relationshipName>HL_Community_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>